--- a/index.html
+++ b/index.html
@@ -27,64 +27,68 @@
         </section>
     </header>
     <main>
-        <section>
-            <h1>Why Web Development??</h1>
-            <p>Web development is a dynamic and essential field with numerous benefits. Let’s explore why it matters</p>
+        <section class="question">
+            <h1 class="title">Why Web Development??</h1>
+            <p class="subtitle">Web development is a dynamic and essential field with numerous benefits. Let’s explore why it matters</p>
             <div class="ans">
-                <div class="">
-                    <h2>I will Do Coding and Change The World</h2>
-                    <p>Web development creates an online presence for businesses, organizations, and individuals</p>
-                    <button>learn more</button>
+                <div>
+                    <h2 class="ans-title">I will Do Coding and Change The World</h2>
+                    <p class="ans-subtitle">Web development creates an online presence for businesses, organizations, and individuals</p>
+                    <button class="ans-btn">learn more</button>
                 </div>
                 <div><img src="images/Layer_1.png" alt=""></div>
             </div>
             <div class="ans">
-                <div>
                     <div><img src="images/Group 3.png" alt=""></div>
-                    <h2>I will help People by creating Modern Web System</h2>
-                    <p>it involves creative problem-solving and continuous innovation.</p>
-                    <button>learn more</button>
+                    <div>
+                    <h2 class="ans-title">I will help People by creating Modern Web System</h2>
+                    <p class="ans-subtitle">it involves creative problem-solving and continuous innovation.</p>
+                    <button class="ans-btn">learn more</button>
+                </div>
                 </div>
             </div>
             <div class="ans">
                     <div>
-                        <h2>The tech industry faces a skills gap, especially among developers.</h2>
-                    <p>The tech industry faces a skills gap, especially among developers.</p>
-                    <button>learn more</button>
+                        <h2 class="ans-title">The tech industry faces a skills gap, especially among developers.</h2>
+                    <p class="ans-subtitle">The tech industry faces a skills gap, especially among developers.</p>
+                    <button class="ans-btn">learn more</button>
                 </div>
                 <div><img src="images/Group 4.png" alt=""></div>
             </div>
         </section> 
         <section>      
         <div class="ispiration">
-            <h1>My Inspiration</h1>
-            <p>We’ll give you some reasons why you should join the thousands of other who are switching to this exciting area.</p>
+            <div class="ispiration-heading">
+                <h1 class="title">My Inspiration</h1>
+            <p class="subtitle">We’ll give you some reasons why you should join the thousands of other who are switching to this exciting area.</p>
+            </div>
+            <div class="yt">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        
+            </div>  
         </div>
         </section>
-        <section>
-            <div class="target">
-                <h1>My Current Target</h1>
-                <p>High-quality photos, illustrations, and graphics can enhance engagement.</p>
+        <section class="target">
+            <div class="target-heading">
+                <h1 class="title">My Current Target</h1>
+                <p class="subtitle">High-quality photos, illustrations, and graphics can enhance engagement.</p>
             </div>
             <div class="target1">
-                <img src="" alt="">
-                <h1></h1>
-                <p></p>
-                <a href=""></a>
+                <img src="images/html.png" alt="">
+                <h1>HTML</h1>
+                <p>HTML is the building block of web pages.</p>
+                <a href="">learn more</a>
             </div>
             <div class="target2">
-                <img src="" alt="">
-                <h1></h1>
-                <p></p>
-                <a href=""></a>
+                <img src="images/css.png" alt="">
+                <h1>CSS</h1>
+                <p>CSS adds style and layout to HTML content</p>
+                <a href="">learn more</a>
             </div>
             <div class="target3">
-                <img src="" alt="">
-                <h1></h1>
-                <p></p>
-                <a href=""></a>
+                <img src="images/js.png" alt="">
+                <h1>JAVASCRIPT</h1>
+                <p>JavaScript adds interactivity to web pages.</p>
+                <a href="">learn more</a>
             </div>
         </section>
         <section>
