--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </section>
     </header>
     <main>
-        <section class="question">
+        <section>
+            <div  class="question">
             <h1 class="title">Why Web Development??</h1>
             <p class="subtitle">Web development is a dynamic and essential field with numerous benefits. Let’s explore why it matters</p>
             <div class="ans">
@@ -45,7 +46,7 @@
                     <p class="ans-subtitle">it involves creative problem-solving and continuous innovation.</p>
                     <button class="ans-btn">learn more</button>
                 </div>
-                </div>
+                
             </div>
             <div class="ans">
                     <div>
@@ -55,6 +56,8 @@
                 </div>
                 <div><img src="images/Group 4.png" alt=""></div>
             </div>
+        </div>
+        </div>
         </section> 
         <section>      
         <div class="ispiration">
@@ -72,6 +75,7 @@
                 <h1 class="title">My Current Target</h1>
                 <p class="subtitle">High-quality photos, illustrations, and graphics can enhance engagement.</p>
             </div>
+        <div class="target-content">
             <div class="target1">
                 <img src="images/html.png" alt="">
                 <h1>HTML</h1>
@@ -90,23 +94,28 @@
                 <p>JavaScript adds interactivity to web pages.</p>
                 <a href="">learn more</a>
             </div>
+        </div>
         </section>
         <section>
             <div class="support">
-                <h2></h2>
-                <p></p>
-                <input type="text" placeholder="Suggest me any feedback for me">
-                <button>Submit</button>
+               <div> <h2 class="title">I need Support</h2>
+                <p class="subtitle">“Could you spare me a few minutes of your time, please?”</p>
+            </div>
+            <div>
+                <input class="supp-input" type="text" placeholder="Suggest me any feedback for me">
+                <button class="supp-btn">Submit</button>
             </div>
         </section>
     </main>
-    <footer>
-            <div class="p">An Open Commitment by MAKSUDUR RAHMAN MAHI</div>
-            <ul>
+    <footer class="footer">
+         <div class="footer-content">   
+        <div class="footer-title" >An Open Commitment by MAKSUDUR RAHMAN MAHI</div>
+            <ul class="footer-icons">
                 <li><img src="images/facebook.png" alt=""></li>
                 <li><img src="images/github.png" alt=""></li>
                 <li><img src="images/linkedin-icon 1.png" alt=""></li>
             </ul>
+        </div>
     </footer>
 </body>
 </html>
