--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>assignment-1</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <section class="thumb">
             
             <div class="thumb-container">
-            
                 <div class="thumb-pic"><img  src="images/Group.png" alt=""></div>
-                <h1 class="thumb-title">"In the near future, I hope to become a Developer."</h1>
+
+               <div> <h1 class="thumb-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="thumb-subtitle">
                     The future of web design is exciting and dynamic, driven by technological advancements and evolving user preferences. Let’s explore some trends and predictions for the future of web design
                 </p>
+            </div>
                 <div class="btn">
                     <button class="thumb-btn">
                     Contact with me
@@ -66,7 +70,7 @@
             <p class="subtitle">We’ll give you some reasons why you should join the thousands of other who are switching to this exciting area.</p>
             </div>
             <div class="yt">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1200" height="600" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>  
         </div>
         </section>
@@ -111,7 +115,8 @@
          <div class="footer-content">   
         <div class="footer-title" >An Open Commitment by MAKSUDUR RAHMAN MAHI</div>
             <ul class="footer-icons">
-                <li><img src="images/facebook.png" alt=""></li>
+</body>
+                <li><a href="https://www.facebook.com/jr.walker.92"></a><img src="images/facebook.png" alt="" >a</li>
                 <li><img src="images/github.png" alt=""></li>
                 <li><img src="images/linkedin-icon 1.png" alt=""></li>
             </ul>
