--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div class="thumb-container">
                 <div class="thumb-pic"><img  src="images/Group.png" alt=""></div>
 
-               <div> <h1 class="thumb-title">"In the near future, I hope to become a Developer."</h1>
+            <div class="thumb-describtion">
+                 <h1 class="thumb-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="thumb-subtitle">
                     The future of web design is exciting and dynamic, driven by technological advancements and evolving user preferences. Let’s explore some trends and predictions for the future of web design
                 </p>
@@ -70,7 +71,7 @@
             <p class="subtitle">We’ll give you some reasons why you should join the thousands of other who are switching to this exciting area.</p>
             </div>
             <div class="yt">
-            <iframe width="1200" height="600" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1200" height="650" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>  
         </div>
         </section>
