few problrms left

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
             <p class="subtitle">We’ll give you some reasons why you should join the thousands of other who are switching to this exciting area.</p>
             </div>
             <div class="yt">
-            <iframe width="1200" height="650" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1520" height="750" src="https://www.youtube.com/embed/wCcocTjzs4c?si=gTaCRDzwzPZ0buBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>  
         </div>
         </section>
-        <section class="target">
+        <section>
+    <div class="target">
             <div class="target-heading">
                 <h1 class="title">My Current Target</h1>
                 <p class="subtitle">High-quality photos, illustrations, and graphics can enhance engagement.</p>
@@ -103,13 +104,16 @@
         </section>
         <section>
             <div class="support">
-               <div> <h2 class="title">I need Support</h2>
-                <p class="subtitle">“Could you spare me a few minutes of your time, please?”</p>
+            <div> 
+                <h2 class="support-title">I need Support</h2>
+                <p class="support-subtitle">“Could you spare me a few minutes of your time, please?”</p>
             </div>
-            <div>
+            
+            <div class="support-opt">
                 <input class="supp-input" type="text" placeholder="Suggest me any feedback for me">
                 <button class="supp-btn">Submit</button>
             </div>
+        </div>
         </section>
     </main>
     <footer class="footer">
