almost final style

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <main>
         <section>
             <div  class="question">
-            <h1 class="title">Why Web Development??</h1>
-            <p class="subtitle">Web development is a dynamic and essential field with numerous benefits. Let’s explore why it matters</p>
+            <div class="ques-heading"><h1 class="title">Why Web Development??</h1>
+            <p class="ques-subtitle">Web development is a dynamic and essential field with numerous benefits. Let’s explore why it matters</p>
+            </div>
             <div class="ans">
                 <div>
                     <h2 class="ans-title">I will Do Coding and Change The World</h2>
