--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
         </div>
         </section>
         <section>
-            <div class="support">
-            <div> 
-                <h2 class="support-title">I need Support</h2>
-                <p class="support-subtitle">“Could you spare me a few minutes of your time, please?”</p>
-            </div>
+        <div class="support">
+            <div class="supp-container"> 
+                <div>
+                    <h2 class="support-title">I need Support</h2>
+                    <p class="support-subtitle">“Could you spare me a few minutes of your time, please?”</p>
+                </div>
             
             <div class="support-opt">
                 <input class="supp-input" type="text" placeholder="Suggest me any feedback for me">
