--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="thumb">
             
             <div class="thumb-container">
-                <div class="thumb-pic"><img  src="images/Group.png" alt=""></div>
+                <div class="thumb-pic"><img  src="./images/Group.png" alt=""></div>
 
             <div class="thumb-describtion">
                  <h1 class="thumb-title">"In the near future, I hope to become a Developer."</h1>
