--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
                 <div class="btn">
                     <button class="thumb-btn"><link rel="stylesheet" href="footer">
-                    Contact with me
+                    Contact with MAHI
                     </button>
                 </div>
             </div>
