--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <p class="thumb-subtitle">
                     The future of web design is exciting and dynamic, driven by technological advancements and evolving user preferences. Let’s explore some trends and predictions for the future of web design.</p>
             </div>
-                <div class="btn">
-                    <button class="thumb-btn"><link rel="stylesheet" href="footer">
-                    Contact with MAHI
-                    </button>
+                <div>
+                  <a href="#footer-btn"><button class="thumb-btn"><link rel="stylesheet" href="">
+                    Contact with Me
+                    </button></a>
                 </div>
             </div>
            
@@ -117,7 +117,7 @@
         </div>
         </section>
     </main>
-    <footer class="footer-contain">
+    <footer class="footer-contain" id="footer-btn">
              
             <h3 class="footer-title">An Open Commitment by MAKSUDUR RAHMAN MAHI
             </h3>
