--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     The future of web design is exciting and dynamic, driven by technological advancements and evolving user preferences. Let’s explore some trends and predictions for the future of web design.</p>
             </div>
                 <div>
-                  <a href="#footer-btn"><button class="thumb-btn"><link rel="stylesheet" href="">
-                    Contact with Me
-                    </button></a>
+                  <a href="#footer-btn" style="text-decoration: none;"><button class="thumb-btn" >Contact with Me</button></a>
                 </div>
             </div>
            
